--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
 <!doctype html>
 <html lang="en" data-theme="light">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="color-scheme" content="dark">
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.pumpkin.min.css"
-    >
     <script type="text/javascript">
       const eventSource = new EventSource('http://localhost:3000/api/stellar/mock/event/sse', {
         withCredentials: false
@@ -16,11 +9,11 @@
       console.log(eventSource.url);
 
       eventSource.onmessage = ( msg ) => {
-        console.log("Received SSE data:" + JSON.stringify(msg));
+        console.log("Received SSE data:" + msg);
         console.log("Received SSE data:" + msg.data);
         const message = document.createElement('div');
-        message.innerText = 'New message: ' + JSON.stringify(msg.data);
-        document.body.appendChild(message);
+        message.innerText = `New message: ${msg.data}`;
+        document.querySelector('#messages').appendChild(message);
       };
       eventSource.onerror = (err) => {
         console.log("Error: " + JSON.stringify(err));
@@ -36,21 +29,36 @@
         console.log("SSE connection closed");
       };
     </script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="color-scheme" content="light dark">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@picocss/pico@2.1.1/css/pico.pumpkin.min.css">
+
     <title>Arbitrage Apes</title>
   </head>
-  <body>
+  <body class="pico-background-pumpkin-30">
+  <hgroup>
     <header class="container-fluid pico-background-pumpkin-50">
+      <h1>Arbitrage Apes</h1>
       <nav>
         <ul>
-          <li><strong>Arbitrage Apes</strong></li>
+          <li><strong>Server Sent Events Demo</strong></li>
+          <li>Event Source: http://localhost:3000/api/stellar/mock/event/sse</li>
         </ul>
       </nav>
     </header>
+  </hgroup>
     <main class="container">
-      <div id="chit-chat"></div>
+      <h3>Emitted Events</h3>
+      <div id="messages">
+
+      </div>
       <div id="scroll-anchor"></div>
     </main>
     <footer class="container-fluid pico-background-pumpkin-50">
+      Server Sent Events Demo
     </footer>
   </body>
 </html>
