Server sent events receiver
Signed-off-by: Chris.Anatalio <chris.anatalio@stellar.org>

--- a/mock-sse-by-contractid.html
+++ b/mock-sse-by-contractid.html
@@ -44,21 +44,21 @@
         <h1>Arbitrage Apes</h1>
         <nav>
             <ul>
-                <li><strong>Server Sent Events Demo</strong></li>
-                <li>Event Source: http://localhost:3000/api/stellar/mock/event/sse</li>
+                <li><strong>Mock Server Sent Events Demo</strong></li>
+                <li>Event Source: http://localhost:3000/api/stellar/mock/event/sse/CC6GBNMVYR4SVUDWTIP7KTMGBQF22OJQFTBXHGZKE3LLJPBGIYXIIOL4</li>
             </ul>
         </nav>
     </header>
 </hgroup>
 <main class="container">
-    <h3>Emitted Events for Contract ID</h3>
+    <h3>Mock Emitted Events for Contract ID</h3>
     <div id="messages">
 
     </div>
     <div id="scroll-anchor"></div>
 </main>
 <footer class="container-fluid pico-background-pumpkin-50">
-    Server Sent Events using Contract ID Filter Demo
+    Mock Server Sent Events using Contract ID Filter Demo
 </footer>
 </body>
 </html>
